# MyCuda

./: .gitignore  CMakeLists.txt  MyCuda.pro  README.md  REAM.md  cudatest.h  main  main.cpp
include/: cudatest.h
install/lib/Debug/: cudaQuery  cudatest
src/: cudaQuery.cu  cudatest.cu
